--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
                     <div class="references">                    
 
                         
-                          <a href="#">Новости</a> <br><br><br>
+                          <a href="news.html">Новости</a> <br><br><br>
                           <a href=main.html#targets>Цели фонда</a> <br><br><br>  
                           <a href=actions.html>Наши акции</a> <br><br><br>  
                           <a href=main.html#structure>Структура</a> <br><br><br>  
@@ -45,46 +45,49 @@
                     <div id="news_header">Новости:</div>
                     <div class="containers">
                         <div class="container">
+                            <a name="news_3"></a>
                             <div class="img">
-                                <a href="*">
+                                <a href="news_text.html#news_3">
                                     <img id="kasatki" src="IMG/kasatki.jpg">
                                 </a>
-                                <div class="photosign">@ Скриншот с видео</div>
+                                <div class="photosign">@ Фото: yomiuri.co.jp</div>
                             </div>
                             <div class="news">
                                 <div class="header">АР: застрявшим во льдах у Курил касаткам удалось вырваться и уплыть на север</div>
                                 <br>
                                 <div class="text">
-                                    <a href="*">Группе косаток убалось уплыть из-за увеличения расстояния между льдинами</a> 
+                                    <a href="news_text.html#news_3">Группе косаток убалось уплыть из-за увеличения расстояния между льдинами</a> 
                                 </div>
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="news_text.html#news_3">Подробности</a>
                                 </div>                                
                             </div>
                         </div>
-                        <div class="container">                            
+                        <div class="container"> 
+                            <a name="news_2"></a>                           
                             <div class="news">
                                 <div class="header">В Петербурге спасли лося, которого сбил автомобиль</div>
                                 <br>
                                     <div class="text">
-                                        <a href="*">В Санкт-Петербурге специалисты помогли лосю, которого сбил автомобиль</a> 
+                                        <a href="news_text.html#news_2">В Санкт-Петербурге специалисты помогли лосю, которого сбил автомобиль</a> 
                                     </div>                                    
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="news_text.html#news_2">Подробности</a>
                                 </div>                                
                             </div>
                             <div class="img">
-                                <a href="*">
+                                <a href="news_text.html#news_2">
                                     <img id="kasatki" src="IMG/los_piter.webp">
                                     </a>
                                 <div class="photosign">© Фото : Официальный телеграм-канал Комитета по природопользованию (Петербург)</div>
                             </div>
                         </div>
                         <div class="container">
+                            <a name="news_1"></a>
                             <div class="img">
-                                <a href="*">
+                                <a href="news_text.html#news_1">
                                     <img id="kasatki" src="IMG/sova.webp">
                                 </a>
                                 <div class="photosign">© Фото : Департамент природных ресурсов ЯНАО</div>
@@ -93,11 +96,11 @@
                                 <div class="header">На Ямале спасли замерзшую сову</div>
                                 <br>
                                 <div class="text">
-                                    <a href="*">В селе Яр-Сале на Ямале спасли замерзшую годовалую сову</a> 
+                                    <a href="news_text.html#news_1">В селе Яр-Сале на Ямале спасли замерзшую годовалую сову</a> 
                                 </div>
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="news_text.html#news_1">Подробности</a>
                                 </div>                                
                             </div>
                         </div>
